fix: removing overflowX

--- a/front/src/styles/globais.scss
+++ b/front/src/styles/globais.scss
@@ -7,6 +7,7 @@
 
 html {
     font-size: 62.5%;
+    overflow-x: hidden;
 }
 
 body {
